# cup

./: Cargo.toml  README.md  cup.toml  example.super  justfile
src/: cup_parser.rs  file_finder.rs  init.rs  main.rs  update.rs  version_extractor.rs
test_files/: config_test.toml  fallback_test.js  infrastructure.bicep  invalid_semver_test.js  libs.versions.toml  multi_target_test.js  pattern_test.js  rezi_test.js  simple.toml  simple_test.js  test.super  test_versions.js
