[package]
name = "cup"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
dir = "0.1.2"
once_cell = "1.20.2"
rayon = "1.11.0"
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
walkdir = "2.5.0"
xshell = "0.2.7"
ignore = "0.4"